@@ -7,6 +7,7 @@
 * Updated swap functions for expr::Parameters and LSPString.
 * Implemented additional parsing methods to the Color class.
 * Added unit tests for LSPString and Color classes.
+* Renamed invalid resolve_entity() method to set_value() method for xml::PullParser.
 
 === 0.5.1 ===
 * Added Color class.
